<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/person_info"
        android:textSize="31sp"
        android:textColor="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="21dp">

        <LinearLayout
            android:id="@+id/username_feild"
            android:layout_width="350dp"
            android:layout_height="58dp"
            android:background="@drawable/background"
            android:paddingEnd="8dp"
            android:paddingStart="16dp">

            <TextView
                android:layout_width="45dp"
                android:layout_height="58dp"
                android:layout_marginTop="2dp"
                android:drawableStart="@drawable/person"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/firstName_signup"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:background="@android:color/transparent"
                    android:hint="@string/f_name"
                    android:paddingBottom="12dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_login_linear"
            android:layout_width="350dp"
            android:layout_height="58dp"
            android:layout_marginTop="21dp"
            android:background="@drawable/background"
            android:paddingEnd="8dp"
            android:paddingStart="16dp">

            <TextView
                android:layout_width="45dp"
                android:layout_height="58dp"
                android:layout_marginTop="2dp"
                android:drawableStart="@drawable/person"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/lastName_signup"
                    android:layout_width="260dp"
                    android:layout_height="40dp"
                    android:inputType="textPersonName"
                    android:background="@android:color/transparent"
                    android:hint="@string/l_name"
                    android:paddingBottom="12dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="@drawable/calenderback"
            android:layout_marginTop="21dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/calander"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:drawablePadding="8dp"
                android:layout_marginTop="2dp"
                />
            <TextView
                android:id="@+id/dateBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/date_of_birth"
                android:textColor="@android:color/darker_gray"
                android:textSize="21sp" />


        </LinearLayout>
        <RadioGroup
            android:id="@+id/genderSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="21dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/genderMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="80dp"
                android:layout_marginStart="80dp"
                android:text="@string/GenderMale"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/genderFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:text="@string/GenderFemale"
                android:textSize="16sp" />
        </RadioGroup>



        <Button
            android:id="@+id/heyllo"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="21dp"
            android:background="@drawable/button"
            android:text="@string/next"
            android:textColor="@android:color/white" />
    </LinearLayout>


</LinearLayout>