<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aaitabem.abugida.abugida.View.UserInfo"
    android:layout_marginTop="16dp"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/account_setup"
            android:textSize="31sp"
            android:textColor="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">


            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="58dp"
                android:layout_marginTop="21dp"
                android:background="@drawable/background"
                android:paddingEnd="8dp"
                android:paddingStart="16dp">
                <TextView
                    android:layout_width="45dp"
                    android:layout_height="58dp"
                    android:layout_marginTop="2dp"
                    android:drawableStart="@drawable/person"
                    />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="260dp"
                        android:layout_height="40dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/email"
                        android:inputType="textWebEmailAddress"
                        android:paddingBottom="12dp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="58dp"
            android:layout_marginTop="21dp"
            android:background="@drawable/background"
            android:paddingEnd="8dp"
            android:paddingStart="16dp">

            <TextView
                android:layout_width="45dp"
                android:layout_height="58dp"
                android:drawableStart="@drawable/person"
                />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                >

                <EditText
                    android:inputType="phone"
                    android:id="@+id/phoneNumber"
                    android:layout_width="260dp"
                    android:layout_height="40dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/phoneNum"
                    android:paddingBottom="12dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="58dp"
            android:layout_marginTop="21dp"
            android:background="@drawable/background"
            android:paddingEnd="8dp"
            android:paddingStart="16dp">

            <TextView
                android:layout_width="45dp"
                android:layout_height="58dp"
                android:layout_marginTop="2dp"
                android:drawableStart="@drawable/person"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/password_signup"
                    android:inputType="textWebPassword"
                    android:layout_width="260dp"
                    android:layout_height="40dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/password"
                    android:paddingBottom="12dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="58dp"
            android:layout_marginTop="21dp"
            android:background="@drawable/background"
            android:paddingEnd="8dp"
            android:paddingStart="16dp">

            <TextView
                android:layout_width="45dp"
                android:layout_height="58dp"
                android:layout_marginTop="2dp"
                android:drawableStart="@drawable/person"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/password_signup_confirm"
                    android:inputType="textWebPassword"
                    android:layout_width="260dp"
                    android:layout_height="40dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/con_pass"
                    android:paddingBottom="12dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="21dp">
            <Button
                android:id="@+id/prev_person_info"
                android:layout_width="150dp"
                android:layout_height="56dp"
                android:layout_marginTop="21dp"
                android:background="@drawable/button"
                android:text="@string/prev"
                android:textColor="@android:color/white" />
            <Button
                android:id="@+id/SignUp"
                android:layout_marginStart="21dp"
                android:layout_width="150dp"
                android:layout_height="56dp"
                android:layout_marginTop="21dp"
                android:background="@drawable/button"
                android:text="@string/next"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
