<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aaitabem.abugida.abugida.View.Login"

    >
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/logo"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="45dp"
                android:src="@drawable/abugidabogo" />

            <LinearLayout
                android:id="@+id/main_login_layout"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="39dp"
                android:layout_marginStart="30dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/username_feild"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:background="@drawable/background"
                    android:paddingEnd="8dp"
                    android:paddingStart="16dp">

                    <TextView
                        android:layout_width="45dp"
                        android:layout_height="58dp"
                        android:drawableStart="@drawable/person"
                        />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp">

                        <EditText
                            android:id="@+id/username_login"
                            android:layout_width="250dp"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:hint="@string/name"
                            android:paddingBottom="12dp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/password_login_linear"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="21dp"
                    android:background="@drawable/background"
                    android:paddingEnd="8dp"
                    android:paddingStart="16dp">

                    <TextView
                        android:layout_width="45dp"
                        android:layout_height="58dp"
                        android:layout_marginTop="3dp"
                        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                        android:paddingBottom="8dp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp">

                        <EditText
                            android:inputType="textWebPassword"
                            android:id="@+id/password_login"
                            android:layout_width="260dp"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:hint="@string/password"
                            android:paddingBottom="12dp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="21dp"
                    android:background="@drawable/button"
                    android:text="@string/login"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:gravity="center_horizontal|center_vertical"
                android:layout_below="@id/main_login_layout">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_user"
                    android:textSize="18sp"
                    />

                <TextView
                    android:id="@+id/sign_upRedirect"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textSize="21sp"
                    />
            </LinearLayout>

        </RelativeLayout>




    </ScrollView>


</android.support.constraint.ConstraintLayout>

